Bug 898318 - The loading icon of video has wrong size in v1.1.0hd

--- a/apps/video/style/spinner.css
+++ b/apps/video/style/spinner.css
@@ -18,7 +18,7 @@
   left: calc(50% - 1.5rem);
   width: 2.9rem;
   height: 2.9rem;
-  background: url(images/spinner.png) no-repeat center center;
+  background: url(images/spinner.png) no-repeat center center / 100%;
   animation: 0.9s spinner-animation infinite steps(30);
   border: none;
   z-index: 100;
